--- a/app/views/settings/profiles/edit.html.erb
+++ b/app/views/settings/profiles/edit.html.erb
@@ -1,49 +1,43 @@
-<div class="password-reset flex w-full mx-auto bg-grey-lighter">
-  <div class="w-1/4 py-8 bg-grey">
-    <ul class="list-reset">
-      <%= link_to edit_settings_account_path, class: 'no-underline' do %>
-        <li class="p-6 hover:bg-grey-lighter cursor-pointer">account</li>
-      <% end %>
-      <li class="p-6 bg-grey-light">profile</li>
-      <%= link_to edit_settings_password_path, class: 'no-underline' do %>
-        <li class="p-6 hover:bg-grey-lighter cursor-pointer">password</li>
-      <% end %>
-    </ul>
-  </div>
-  <div class="w-3/4 p-8">
-    <h2 class="mb-6"><%= t(".title") %></h2>
-    <%= simple_form_for @profile, url: settings_profile_url, method: :patch do |f| %>
-      <div class="my-2">
-        <p class="text-sm">full name:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :full_name, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
-      <div class="my-2">
-        <p class="text-sm">bio:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :bio, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content bg-dark">
 
-      <%= f.simple_fields_for :links, OpenStruct.new(@profile.links) do |link| %>
-        <div class="my-2">
-          <p class="text-sm">homepage:</p>
-        </div>
-        <div class="text-field my-2">
-          <%= link.input :homepage, input_html: { class: 'w-full-input' }, label: false %>
+          <div class="row no-margin">
+
+            <div class="col s3">
+              <ul class="list-reset settings-ul">
+                <%= link_to edit_settings_account_path, class: 'no-underline' do %>
+                  <li class="pa2 white-text">account</li>
+                <% end %>
+                <li class="pa2 white-text">profile</li>
+                <%= link_to edit_settings_password_path, class: 'no-underline' do %>
+                  <li class="pa2 white-text cursor-pointer">password</li>
+                <% end %>
+              </ul>
+            </div>
+
+            <div class="col s9 bg-white right-inner-card">
+              <h3 class="mt0 mb4"><%= t(".title") %></h3>
+              <%= simple_form_for @profile, url: settings_profile_url, method: :patch do |f| %>
+                <%= f.input :full_name, input_html: { class: 'validate' }, label: 'full name' %>
+                <%= f.input :bio, input_html: { class: 'materialize-textarea validate textarea-main' }, label: 'bio' %>
+
+                <%= f.simple_fields_for :links, OpenStruct.new(@profile.links) do |link| %>
+                    <%= link.input :homepage, input_html: { class: 'validate' }, label: 'homepage' %>
+                    <%= link.input :github, input_html: { class: 'validate' }, label: 'github' %>
+                <% end %>
+
+                <%= f.button :submit, value: 'update account', class: 'btn-dark' %>
+              <% end %>
+            </div>
+
+          </div>
+
         </div>
 
-        <div class="my-2">
-          <p class="text-sm">github:</p>
-        </div>
-        <div class="text-field my-2">
-          <%= link.input :github, input_html: { class: 'w-full-input' }, label: false %>
-        </div>
-      <% end %>
-      <div class="submit-field my-4 text-center">
-        <%= f.button :submit, value: 'update profile', class: 'btn-default mx-auto px-8' %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
