styles new invite and all team views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,3 +146,7 @@ abbr {
   font-weight: 600;
   font-variant: all-small-caps;
 }
+
+.team-user-list {
+  border-top: 1px solid $primary-color-dark;
+}
