--- a/app/views/activities/invites/new.html.erb
+++ b/app/views/activities/invites/new.html.erb
@@ -1,64 +1,61 @@
-<div class="w-full-card w-auto">
-  <div class="m-0 p-0">
-    <ul class="list-reset float-none">
-      <%= link_to(team_path(@team)) do %>
-        <li class="float-left p-4 bg-grey-light mx-1 hover:bg-grey-lightest">cancel</li>
-      <% end %>
-    </ul>
+<div class="row">
+  <div class="col s12">
+    <%= link_to 'cancel', team_path(@team), class: 'waves-effect waves-light btn btn-dark' %>
   </div>
 </div>
 
-<div class="w-full-card">
-  <div class="w-full">
-    <%= simple_form_for @invite, url: team_invites_path do |f| %>
-      <div class="my-2">
-        <p class="text-sm">email:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :member_email, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
-      <div class="submit-field my-4 text-center">
-        <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
-      </div>
-    <% end %>
-  </div>
-</div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content overflow-auto">
+          <%= simple_form_for @invite, url: team_invites_path do |f| %>
+              <%= f.input :member_email, input_html: { class: 'validate' }, label: 'email' %>
 
-<div class="w-full-card w-auto bg-white">
-  <div class="m-0 p-0">
-    <h3 class="float-left p-1 mx-1">pending invites</h3>
-  </div>
-</div>
-
-<% @team.activity_invites.pending.try(:each) do |invitee| %>
-  <%= link_to user_path(invitee.user) do %>
-    <div class="w-full-card hover-grow">
-      <div class="w-2/3 pr-4">
-        <h3 class="w-full"><%= invitee.user.username %></h3>
-      </div>
-      <div class="w-1/3 pr-4">
-        <h3 class="w-full">
-          <%= link_to 'X', team_invite_path(@team, invitee),
-                      data: {confirm: 'Are you sure you want to revoke this invite?'},
-                      method: :delete %>
-        </h3>
+              <%= f.button :submit, value: 'send invite', class: 'btn-dark' %>
+          <% end %>
+        </div>
       </div>
     </div>
-  <% end %>
-<% end %>
-
-<div class="w-full-card w-auto bg-white">
-  <div class="m-0 p-0">
-    <h3 class="float-left p-1 mx-1">members of team</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content overflow-auto">
+          <h5 class="float-left p-1 mx-1">pending invites</h5>
+          <% @team.activity_invites.pending.try(:each) do |invitee| %>
+              <div class="team-user-list">
+                <h6>
+                  <%= link_to invitee.user.username, user_path(invitee.user) %>
+                  <%= link_to '(revoke)', team_invite_path(@team, invitee),
+                              data: {confirm: 'Are you sure you want to revoke this invite?'},
+                              method: :delete %>
+                </h6>
+              </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content overflow-auto">
+          <h5 class="float-left p-1 mx-1">members of team</h5>
+          <% @team.members.each do |member| %>
+            <%= link_to user_path(member) do %>
+              <div class="team-user-list">
+                <h6><%= member.username %></h6>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-<% @team.members.try(:each) do |member| %>
-  <%= link_to user_path(member) do %>
-    <div class="w-full-card hover-grow">
-      <div class="w-full pr-4">
-        <h3 class="w-full"><%= member.username %></h3>
-      </div>
-    </div>
-  <% end %>
-<% end %>
