--- a/app/views/invests/new.html.erb
+++ b/app/views/invests/new.html.erb
@@ -6,7 +6,7 @@
           <span class="card-title"><%= t(".title") %></span>
 
             <%= simple_form_for @invest do |f| %>
-                <%= f.input :title, input_html: { class: 'validate ml2' }, label: 'title' %>
+                <%= f.input :title, input_html: { class: 'validate' }, label: 'title' %>
                 <%= f.input :body, input_html: { class: 'materialize-textarea validate textarea-main' }, label: 'description' %>
 
               <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
