--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,49 +1,24 @@
-<div class="w-full-card">
-  <div class="w-full p-4 pb-0">
-    <h2 class="mb-6"><%= t(".title") %></h2>
-  </div>
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title"><%= t(".title") %></span>
 
-  <div class="w-full p-4 pt-0">
-    <%= simple_form_for @team do |f| %>
-      <div class="my-2">
-        <p class="text-sm">name:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :name, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
-      <div class="my-2">
-        <p class="text-sm">url:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :slug, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
-      <div class="my-2">
-        <p class="text-sm">description:</p>
-      </div>
-      <div class="text-field my-2">
-        <%= f.input :description, input_html: { class: 'w-full-input' }, label: false %>
-      </div>
+          <%= simple_form_for @team do |f| %>
+              <%= f.input :name, input_html: { class: 'validate' }, label: "name" %>
+              <%= f.input :slug, input_html: { class: 'validate' }, label: "slug (your team page will live at myinvestmenttime.com/teams/slug)" %>
+              <%= f.input :description, input_html: { class: 'materialize-textarea validate textarea-main' }, label: "description" %>
 
-      <%= f.simple_fields_for :links, OpenStruct.new(@team.links) do |link| %>
-        <div class="my-2">
-          <p class="text-sm">homepage:</p>
-        </div>
-        <div class="text-field my-2">
-          <%= link.input :homepage, input_html: { class: 'w-full-input' }, label: false %>
-        </div>
+            <%= f.simple_fields_for :links, OpenStruct.new(@team.links) do |link| %>
+                <%= link.input :homepage, input_html: { class: 'validate' }, label: "homepage" %>
+                <%= link.input :github, input_html: { class: 'validate' }, label: "github" %>
+            <% end %>
 
-        <div class="my-2">
-          <p class="text-sm">github:</p>
+            <%= f.button :submit, class: 'btn-dark' %>
+          <% end %>
         </div>
-        <div class="text-field my-2">
-          <%= link.input :github, input_html: { class: 'w-full-input' }, label: false %>
-        </div>
-      <% end %>
-
-      <div class="submit-field my-4 text-center">
-        <%= f.button :submit, class: 'btn-default mx-auto px-8' %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
-
