--- a/app/views/teams/shared/_team_list.html.erb
+++ b/app/views/teams/shared/_team_list.html.erb
@@ -1,9 +1,12 @@
-<div class="w-full-card hover-grow">
-  <div class="w-3/4 pr-4">
-    <h3 class="w-full border-b-2 border-grey-light mb-2"><%= team.name %></h3>
-    <p><%= truncate team.description, length: 200, separator: /\w+/ %></p>
-  </div>
-  <div class="w-1/4 border-l-2 border-grey-light pl-4">
-    <p>owner: <%= team.owner.username %></p>
+<div class="row hover-grow">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title pb1"><%= team.name %></span>
+          <p><%= truncate team.description, length: 200, separator: /\w+/ %></p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
