--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,10 @@ abbr {
   color: #e4e4e4 !important;
 }
 
+.white-bg {
+  background-color: #fff !important;
+}
+
 .btn-dark {
   background-color: $primary-color-dark;
   &:hover {
@@ -127,8 +131,8 @@ abbr {
 }
 
 .hover-grow:hover {
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+  -webkit-transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 .error {
@@ -149,4 +153,8 @@ abbr {
 
 .team-user-list {
   border-top: 1px solid $primary-color-dark;
+}
+
+.light-weight {
+  font-weight: 300;
 }
