--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,8 +1,14 @@
-<div class="w-full-card w-auto bg-white">
-  <div class="m-0 p-0">
-    <h3 class="float-left p-1 mx-1">pending invitations</h3>
+<div class="row">
+  <div class="col s12">
+    <div class="card blue-grey darken-1">
+      <div class="card-stacked">
+        <div class="card-content">
+          <span class="card-title white-text">pending invitations</span>
+          <% @invitations.pending.try(:each) do |invite| %>
+            <%= render 'activities/shared/invite_list', invite: invite %>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<% @invitations.pending.try(:each) do |invite| %>
-  <%= render 'activities/shared/invite_list', invite: invite %>
-<% end %>
