--- a/app/views/invests/shared/_invest_small.html.erb
+++ b/app/views/invests/shared/_invest_small.html.erb
@@ -1,6 +1,8 @@
-<div class="w-full-card hover-grow bg-grey-light">
-  <div class="pr-4">
-    <h3 class="w-full border-b-2 border-grey-light mb-2"><%= invest.title %></h3>
-    <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
+<div class="hover-grow card">
+  <div class="card-stacked">
+    <div class="card-content">
+      <span class="card-title"><%= invest.title %></span>
+      <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
+    </div>
   </div>
 </div>
