adds image upload for profile avatars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,3 +158,15 @@ abbr {
 .light-weight {
   font-weight: 300;
 }
+
+.avatar-preview {
+  max-height: 200px;
+}
+
+.tiny-text {
+  font-size: 10px;
+}
+
+.mt-20 {
+  margin-bottom: 30px;
+}
