--- a/app/views/settings/profiles/edit.html.erb
+++ b/app/views/settings/profiles/edit.html.erb
@@ -29,7 +29,7 @@
                   <% else %>
                     <%= image_tag 'avatar_placeholder.png', alt: 'Placeholder Avatar', class: 'avatar-preview', id: 'avatarPreview' %>
                   <% end %>
-                  <%= f.input :avatar, input_html: { id: 'avatar-file', class: 'validate mb2 mt-20' }, label: false %>
+                  <%= f.input :avatar, input_html: { id: 'avatar-file', class: 'validate mb2 mt-20' }, accept: 'image/*', label: false %>
                 </div>
                 <%= f.input :full_name, input_html: { class: 'validate' }, label: 'full name' %>
                 <%= f.input :bio, input_html: { class: 'materialize-textarea validate textarea-main' }, label: 'bio' %>
