--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -2,6 +2,7 @@
   <li><%= link_to t("menu.search"), root_path, class: 'no-underline black-text' %></li>
   <% if signed_in? -%>
     <li><%= link_to t("menu.teams"), teams_path, class: 'no-underline black-text' %></li>
+    <li><%= link_to t("menu.profile"), user_path(current_user), class: 'no-underline black-text' %></li>
     <li><%= link_to t("menu.settings"), edit_settings_account_path, class: 'no-underline black-text' %></li>
     <li class="divider"></li>
     <li><%= link_to t("menu.log_out"), sign_out_path, method: :delete, class: 'no-underline black-text' %></li>
