fixes when profile image is nil and style color changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,22 +2,19 @@
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "materialize/components/color-variables";
 
-$primary-color: color("blue-grey", "base");
+$primary-color: color("blue-grey", "darken-1");
 $primary-color-light: lighten($primary-color, 15%);
-$primary-color-dark: darken($primary-color, 5%);
+$primary-color-dark: darken($primary-color, 15%);
 
-$secondary-color: color("blue-grey", "lighten-1");
-$success-color: color("blue-grey", "lighten-3");
+$secondary-color: color("blue-grey", "lighten-3");
+$success-color: color("blue-grey", "lighten-4");
 $error-color: color("red", "darken-4");
 $link-color: color("teal", "darken-4");
-
-$light-input-color: #e4e4e4;
-$white-color: #f7f7f7;
 
 @import 'materialize';
 
 body {
-  background-color: lighten($secondary-color, 25%);
+  background-color: lighten($secondary-color, 20%);
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -37,11 +34,11 @@ a {
 }
 
 input.light-color {
-  color: $light-input-color !important;;
+  color: #e4e4e4 !important;;
 }
 
 label.light-color {
-  color: $success-color !important;;
+  color: $success-color;
 }
 
 abbr {
@@ -61,11 +58,11 @@ abbr {
 }
 
 .white-text {
-  color: $light-input-color !important;
+  color: #e4e4e4 !important;
 }
 
 .white-bg {
-  background-color: $white-color !important;
+  background-color: #fff !important;
 }
 
 .btn-dark {
@@ -91,7 +88,7 @@ abbr {
 
 .settings-ul {
   li {
-    border-bottom: 1px solid $light-input-color;
+    border-bottom: 1px solid #e4e4e4;
   }
 }
 
@@ -108,11 +105,7 @@ abbr {
 }
 
 .card-action a {
-  color: $light-input-color !important;
-}
-
-.card {
-  background-color: $white-color;
+  color: #e4e4e4 !important;
 }
 
 .head-logo {
