--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -12,7 +12,7 @@
           <%= form.password_field :password, class: 'validate light-color' %>
         </div>
 
-        <%= form.submit class: 'btn black-text pointer' %>
+        <%= form.submit class: 'btn btn-light black-text pointer' %>
       <% end %>
     </div>
   </div>
