--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -10,7 +10,7 @@
           <%= form.text_field :email, type: 'email', class: 'validate light-color' %>
         </div>
 
-        <%= form.submit class: 'btn black-text pointer' %>
+        <%= form.submit class: 'btn btn-light black-text pointer' %>
       <% end %>
     </div>
   </div>
