--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
       <%= form_for @user do |form| %>
         <%= render partial: '/users/form', object: form %>
 
-        <%= form.submit class: 'btn black-text pointer' %>
+        <%= form.submit class: 'btn btn-light black-text pointer' %>
       <% end %>
     </div>
     <div class="card-action">
