--- a/app/views/invests/show.html.erb
+++ b/app/views/invests/show.html.erb
@@ -17,9 +17,9 @@
           </div>
           <div class="right">
             <% if current_user.likes.where(invest: @invest).blank? %>
-              <h6 class="pl2"><%= link_to invest_likes_path(@invest), class: 'no-underline likes', method: :post do %><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %><% end %></h6>
+              <h6 class="pl2" id="addLikeButton"><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %></h6>
             <% else %>
-              <h6 class="pl2"><%= link_to invest_like_path(@invest, Like.find_by(user: current_user, invest: @invest)), class: 'no-underline likes', method: :delete do %><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %><% end %></h6>
+              <h6 class="pl2" id="removeLikeButton"><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %></h6>
             <% end %>
           </div>
           <div class="cl divider w-100"></div>
