--- a/app/views/invests/show.html.erb
+++ b/app/views/invests/show.html.erb
@@ -16,11 +16,10 @@
             <h6><%= link_to @invest.user.username, user_url(@invest.user) %></h6>
           </div>
           <div class="right">
-            <% if current_user.likes.where(invest: @invest).blank? %>
-              <h6 class="pl2" id="addLikeButton"><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %></h6>
-            <% else %>
-              <h6 class="pl2" id="removeLikeButton"><i class="material-icons likes-icon">thumb_up</i> <%= @invest.likes.length %></h6>
-            <% end %>
+            <h6 class="pl2 pointer" id="likeButton">
+              <i class="material-icons likes-icon">thumb_up</i>
+              <span id="likeCount" class="like-button"><%= @invest.likes.length %></span>
+            </h6>
           </div>
           <div class="cl divider w-100"></div>
           <div class="pt2">
