Move like AJAX to React component (#45)
* react component for likes view finished

* moves like ajax js to axios call in like component

--- a/app/views/invests/show.html.erb
+++ b/app/views/invests/show.html.erb
@@ -16,10 +16,11 @@
             <h6><%= link_to @invest.user.username, user_url(@invest.user) %></h6>
           </div>
           <div class="right">
-            <h6 class="pl2 pointer" id="likeButton" data-invest-id="<%= @invest.id %>">
-              <i class="material-icons likes-icon">thumb_up</i>
-              <span id="likeCount" class="like-button"><%= @invest.likes.length %></span>
-            </h6>
+            <%= content_tag :div,
+                            id: 'likeContainer',
+                            data: { likes: @invest.likes.length,
+                                    investid: @invest.id } do %>
+            <% end %>
           </div>
           <div class="cl divider w-100"></div>
           <div class="pt2">
@@ -65,3 +66,5 @@
     </div>
   </div>
 </div>
+
+<%= javascript_pack_tag 'LikeComponent' %>
