--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,7 +128,7 @@ abbr {
 }
 
 .likes-icon {
-  font-size: 20px;
+  font-size: 11px !important;
 }
 
 .likes {
@@ -188,4 +188,34 @@ abbr {
 
 .like-button {
   font-size: 2.3rem;
+}
+
+.number-button {
+  width: 130px;
+  text-align: left;
+  padding-right: 0;
+  span {
+    float: right;
+    width: 30px;
+    text-align: center;
+    border-left: 1px solid $white-color;
+    margin-left: 5px;
+  }
+}
+
+.number-button-large {
+  width: 165px;
+  text-align: left;
+  padding-right: 0;
+  span {
+    float: right;
+    width: 30px;
+    text-align: center;
+    border-left: 1px solid $white-color;
+    margin-left: 5px;
+  }
+}
+
+.options-container {
+  display: inline-block;
 }
